update argsfor Java 17